# mix-web-demo

./: .gitignore  LICENSE  README.md  build.sh  dist-control.sh  docker-compose.yml  mix  run.ps1  run.sh  run_muti.sh  services.sh  setup.sh  stop.sh
fastapi/: .dockerignore  .env.example  Dockerfile  application.yaml  main.py  pyproject.toml  requirements.txt
fastapi/api/: __init__.py  app.py
fastapi/api/controller/: __init__.py  aiCommentController.py  aiHistoryController.py  analyzeController.py  apilogController.py  chatController.py  generateController.py  testController.py  uploadController.py  userController.py
fastapi/api/mapper/: __init__.py  aiHistoryMapper.py  apilogMapper.py  articleMapper.py  articlelogMapper.py  categoryMapper.py  categoryReferenceMapper.py  collectMapper.py  commentsMapper.py  focusMapper.py  likeMapper.py  subCategoryMapper.py  userMapper.py  vectorMapper.py
fastapi/api/service/: __init__.py  aiCommentService.py  aiHistoryService.py  analyzeService.py  apilogService.py  baseAIService.py  cozeService.py  doubaoService.py  embeddingService.py  geminiService.py  generateService.py  promptService.py  qwenService.py  tongyiService.py  uploadService.py  userService.py
fastapi/app/: __init__.py  app.py  lifespan.py
fastapi/app/agents/: __init__.py  extractor.py  intentRouter.py  userPermissionManager.py
fastapi/app/api/: __init__.py
fastapi/app/cache/: __init__.py  articleCache.py  baseCache.py  categoryCache.py  publishTimeCache.py  statisticsCache.py  versionedCache.py  wordcloudCache.py
fastapi/app/core/: __init__.py
fastapi/app/crud/: __init__.py  aiHistory.py  apiLog.py  article.py  articleLog.py  category.py  categoryReference.py  collect.py  comments.py  focus.py  like.py  user.py
fastapi/app/db/: __init__.py  clickhouse.py  hive.py  mysql.py  oss.py  rabbitmq.py  redis.py
fastapi/app/decorators/: adminCheck.py  apiLog.py  requireInternalToken.py
fastapi/app/middleware/: __init__.py  contextMiddleware.py
fastapi/app/models/: __init__.py  article.py  user.py
fastapi/app/schemas/: __init__.py  chatDTO.py
fastapi/app/services/: __init__.py  scheduler.py
fastapi/client/: client.py
fastapi/common/agent/: __init__.py  extractor.py  intentRouter.py  intent_router.py  mongoDBLogTools.py  mongoDBTools.py  ragTools.py  rag_tools.py  sqlTools.py  sql_tools.py  userPermissionManager.py
fastapi/common/cache/: __init__.py  baseCache.py  (+7 more)
fastapi/config/: __init__.py  config.py  hive.py  mongodb.py  mysql.py  nacos.py  oss.py  postgres.py  rabbitmq.py  redis.py
fastapi/controller/: analyzeController.py  testController.py  uploadController.py
fastapi/dto/: uploadDTO.py
fastapi/fastapi-ai/: main.py  requirements.txt
fastapi/fastapi-data/: main.py  requirements.txt
fastapi/handler/: exception_handlers.py
fastapi/middleware/: ContextMiddleware.py
fastapi/po/: article.py  listResponse.py
fastapi/service/: analyzeService.py
fastapi/utils/: response.py
(+1396 files in other folders)
