[project]
name = "fastapi-app"
version = "1.0.0"
description = "FastAPI微服务"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.9",
    "pyyaml==6.0.2",
    "PyJWT>=2.8.0",
    "nacos-sdk-python==2.0.8",
    "requests==2.32.5",
    "httpx[socks]>=0.25.0",
    "sqlmodel==0.0.24",
    "pymysql==1.1.1",
    "pymongo==4.13.2",
    "redis==5.0.1",
    "pika==1.3.2",
    "wordcloud==1.9.4",
    "oss2==2.19.1",
    "jieba==0.42.1",
    "pandas==2.3.1",
    "python-multipart==0.0.20",
    "pgvector==0.4.1",
    "psycopg2-binary>=2.9.7",
    "clickhouse-driver>=0.2.0",
    "langchain==1.0.5",
    "langchain-openai==1.0.2",
    "langchain-community==0.4.1",
    "langchain-core==1.0.4",
    "langchain-text-splitters==1.0.0",
    "pypdf>=4.0.0",
    "dashscope>=1.20.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "openpyxl >= 3.1.0",
]
